The office365.com will allow only OAuth2 in the future
- evolution-ews 3.50.3
I have a personal Outlook.com account, and I am using an app password to connect Evolution to it using EWS + Basic authentication.
Recently, there has been an increased number of recurring password prompts in Evolution, and it does not succeed from the first time. I have to confirm the authentication dialogue several times until it succeeds.
Microsoft acknowledges the problem:
In the coming months, Microsoft will be working to fully remove support for Basic authentication from Outlook.com, and only rely on OAuth. Users are advised to move from Basic authentication to OAuth, which should eliminate the increased number of authentication prompts they may be seeing.
I tried to use OAuth2 for authentication in Evolution, but I get this error:
We are unable to issue tokens from this API version for a Microsoft account. Please contact the application vendor as they need to use version 2.0 of the protocol to support this.