src/libedataserver/e-oauth2-service-outlook.c
@@ -42,7 +42,11 @@ eos_outlook_guess_can_process (EOAuth2Service *service,
 			       const gchar *protocol,
 			       const gchar *hostname)
 {
-	return hostname && e_util_utf8_strstrcase (hostname, ".outlook.com");
+	return hostname && protocol && (
+		g_ascii_strcasecmp (protocol, "imapx") == 0 ||
+		g_ascii_strcasecmp (protocol, "smtp") == 0) && (
+		e_util_utf8_strstrcase (hostname, ".outlook.com") ||
+		e_util_utf8_strstrcase (hostname, ".office365.com"));
 }
 
 static const gchar *
